Fix #277 : Support bonus nerfAllPlayers (#279)
* Support bonus nerfAllPlayers

* Fix quality flaw