@@ -4,7 +4,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.blondin.mpg.out.ChampionshipOutType;
 import org.blondin.mpg.out.InjuredSuspendedWrapperClient;
@@ -23,24 +22,22 @@ public abstract class AbstractMercatoMpgProcess extends AbstractMpgProcess {
     private static final Logger LOG = LoggerFactory.getLogger(AbstractMercatoMpgProcess.class);
 
     protected static void processMercato(List<Player> players, InjuredSuspendedWrapperClient outPlayersClient, ChampionshipOutType championship) {
-        Collections.sort(players,
-                Comparator.comparing(Player::getPosition).thenComparing(Player::getEfficiency).thenComparing(Player::getQuotation).reversed());
-        List<Player> goals = players.stream().filter(p -> p.getPosition().equals(Position.G)).collect(Collectors.toList()).subList(0, 5);
-        List<Player> defenders = players.stream().filter(p -> p.getPosition().equals(Position.D)).collect(Collectors.toList()).subList(0, 10);
-        List<Player> midfielders = players.stream().filter(p -> p.getPosition().equals(Position.M)).collect(Collectors.toList()).subList(0, 10);
-        List<Player> attackers = players.stream().filter(p -> p.getPosition().equals(Position.A)).collect(Collectors.toList()).subList(0, 10);
+        Collections.sort(players, Comparator.comparing(Player::getPosition).thenComparing(Player::getEfficiency).thenComparing(Player::getQuotation).reversed());
+        List<Player> goals = players.stream().filter(p -> p.getPosition().equals(Position.G)).toList().subList(0, 5);
+        List<Player> defenders = players.stream().filter(p -> p.getPosition().equals(Position.D)).toList().subList(0, 10);
+        List<Player> midfielders = players.stream().filter(p -> p.getPosition().equals(Position.M)).toList().subList(0, 10);
+        List<Player> attackers = players.stream().filter(p -> p.getPosition().equals(Position.A)).toList().subList(0, 10);
 
         AsciiTable at = getTable(TABLE_POSITION, TABLE_PLAYER_NAME, TABLE_EFFICIENCY, TABLE_QUOTE, "Auct.", "Out info");
         for (List<Player> line : Arrays.asList(goals, defenders, midfielders, attackers)) {
             for (Player player : line) {
-                org.blondin.mpg.out.model.Player outPlayer = outPlayersClient.getPlayer(championship, player.getName(),
-                        PositionWrapper.toOut(player.getPosition()), player.getClubName(), OutType.INJURY_GREEN);
+                org.blondin.mpg.out.model.Player outPlayer = outPlayersClient.getPlayer(championship, player.getName(), PositionWrapper.toOut(player.getPosition()), player.getClubName(),
+                        OutType.INJURY_GREEN);
                 String outInfos = "";
                 if (outPlayer != null) {
                     outInfos = String.format("%s - %s - %s", outPlayer.getOutType(), outPlayer.getDescription(), outPlayer.getLength());
                 }
-                AT_Row row = at.addRow(player.getPosition(), player.getName(), FORMAT_DECIMAL_DOUBLE.format(player.getEfficiency()),
-                        player.getQuotation(), player.getAuction(), outInfos);
+                AT_Row row = at.addRow(player.getPosition(), player.getName(), FORMAT_DECIMAL_DOUBLE.format(player.getEfficiency()), player.getQuotation(), player.getAuction(), outInfos);
                 setTableFormatRowPaddingSpace(row);
                 row.getCells().get(2).getContext().setTextAlignment(TextAlignment.RIGHT);
                 row.getCells().get(3).getContext().setTextAlignment(TextAlignment.RIGHT);
